update main page to load and css set to fixed, absolute, z-index

--- a/public/css/syle.css
+++ b/public/css/syle.css
@@ -1,8 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600&display=swap');
 
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #53565a;
+}
+
 #animation-bg {
     width: 100%;
     height: 100%;
+    position: fixed;
+    z-index: 1;
   }
 
  #headline {
@@ -22,10 +29,31 @@
 #throne-bg {
     background-image: url(./images/iron-throne.png);
     background-size: cover;
+    position: fixed;
+    z-index: 20;
 }
 
 #subhead {
     letter-spacing: 3px;
     font-weight: bold;
     text-transform: uppercase;
+}
+
+#navigation {
+ position: fixed;
+ z-index: 50;
+ width: 100%;
+  
+}
+
+#body-cont {
+  position: relative;
+  z-index: 100;
+  top: 10%;
+}
+
+#main-cont {
+  position: relative;
+  z-index: 100;
+  top: 10%;
 }
